[gd_scene load_steps=5 format=3 uid="uid://q7mbib5wbfi2"]

[ext_resource type="Script" path="res://scripts/enemy/gear_bullt.gd" id="1_ka6wu"]
[ext_resource type="Texture2D" uid="uid://7t3lvgk0rjph" path="res://assests/objects/gear.png" id="2_mdyke"]

[sub_resource type="CircleShape2D" id="CircleShape2D_co3ph"]
radius = 5.09902

[sub_resource type="CircleShape2D" id="CircleShape2D_elm8q"]
radius = 5.09902

[node name="GearBullet" type="Area2D"]
position = Vector2(171, 87)
script = ExtResource("1_ka6wu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_co3ph")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.499997, 0)
scale = Vector2(0.025, 0.02)
texture = ExtResource("2_mdyke")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_elm8q")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
